[package]
name = "monee-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "^1.39.1", features = ["full"] }
monee = { path = "../monee", default-features = false }
monee_core = { path = "../monee/monee_core" }
cream = { git = "https://github.com/ocxide/cream.git" }

[features]
default = ["monee/remote"]
embedded = ["monee/embedded"]
