[package]
name = "monee-mobile-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
## leptos
leptos = { version = "^0.7", features = ["csr"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
## serde
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"

monee_core = { path = "../monee/monee_core" }
monee_types = { path = "../monee/monee_types" }
send_wrapper = "0.6.0"
leptos_router = "0.7.1"
futures-channel = "0.3.31"
futures-util = "0.3.31"

[workspace]
members = ["src-tauri"]
