[package]
name = "monee"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["monee_core", "monee_types"]

[dependencies]
monee_core = { path = "monee_core" }
monee_types = { path = "monee_types" }
serde = { version = "1.0.203", features = ["derive"] }
surrealdb = { version = "1.5.2" } 
serde_json = "1.0.117"
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "^1.39.1", features = ["full"] }
thiserror = "1.0.61"
cream = { git = "https://github.com/ocxide/cream.git" }
async-trait = "0.1.81"

[features]
default = ["remote"]
embedded=["surrealdb/kv-rocksdb"]
remote=[]
db_test=["surrealdb/kv-mem"]
