[package]
name = "twon-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
twon_core = { path = "../twon-internal/twon_core" }
twon_persistence = { path = "../twon-internal/twon_persistence" }
