[package]
name = "twon-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
twon_core = { path = "../twon-internal/twon_core" }
twon_persistence = { path = "../twon-internal/twon_persistence", features = ["remote"] }
