[package]
name = "twon-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
twon = { path = "../twon", default-features = false }
twon_core = { path = "../twon/twon_core" }

[features]
default = ["twon/remote"]
embedded = ["twon/embedded"]
