[package]
name = "twon"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["twon_core", "twon_persistence"]

[dependencies]
twon_core = { path = "./twon_core" }
serde = { version = "1.0.203", features = ["derive"] }
surrealdb = { version = "1.5.2" } 
serde_json = "1.0.117"
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.38.0", features = ["full"] }
thiserror = "1.0.61"

[features]
default = ["remote"]
file=["surrealdb/kv-rocksdb"]
remote=[]
