[package]
name = "monee_types"
version = "0.1.0"
edition = "2021"

[dependencies]
monee_core = { path = "../monee_core" }
idn = { git = "https://github.com/ocxide/idn" }
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
cream = { git = "https://github.com/ocxide/cream.git" }
chrono = { version = "0.4.38", features = ["serde"] }

# TODO: remove, only used in testing
serde_json = "1.0.117"
