[package]
name = "twon_persistence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twon_core = { path = "../twon_core" }
serde = { version = "1.0.203", features = ["derive"] }
surrealdb = { version = "1.5.2", features = ["kv-rocksdb"] }
serde_json = "1.0.117"
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.38.0", features = ["full"] }
thiserror = "1.0.61"
